Fix button alignment in premium purchase confirmation modal

--- a/ui/scss/component/_membership.scss
+++ b/ui/scss/component/_membership.scss
@@ -15,7 +15,6 @@
 
   .section__actions {
     display: block;
-    text-align: center;
   }
 
   .card__main-actions {
